Revision history for perl distribution OpenAPI-Client

0.06 Not Released
 - Add validator() method
 - Will list available operationIds when no operationId is specified

0.05 2017-08-20T11:18:54+0200
 - Forgot to bump JSON::Validator to 1.01

0.04 2017-08-19T23:05:26+0200
 - Fix "mojo openapi" against online resources

0.03 2017-08-19T22:39:33+0200
 - Add "mojo openapi" command
 - Add support for running against local app
 - Removed local_app() method

0.02 2017-08-19T10:59:07+0200
 - Fix validation of body parameters

0.01 2017-08-18T19:30:32+0200
 - Converted Swagger2::Client to OpenAPI::Client
 - Marked as EXPERIMENTAL
