@@ -2,6 +2,7 @@ Revision history for perl distribution OpenAPI-Client
 
 0.06 Not Released
  - Add validator() method
+ - Add "mojo openapi spec.json -I operationId"
  - Will list available operationIds when no operationId is specified
 
 0.05 2017-08-20T11:18:54+0200
